examples/datalog/24_rel_schemas/02_record_schema_sugar.dl.out
Executing script: examples/datalog/24_rel_schemas/02_record_schema_sugar.dl

> .db create test_record_sugar
Database 'test_record_sugar' created.
Switched to database: test_record_sugar
> .db use test_record_sugar
Switched to database: test_record_sugar
> type Person: { id: int, name: string, age: int }.
Type 'Person' declared.
> type Address: { person_id: int, city: string }.
Type 'Address' declared.
> rel person: Person.
Script error: Line 13: Parse error: Unrecognized statement: rel person: Person.
